[package]
name = "passmaster"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = { version = "0.5.3", features = ["std"] }
clipboard = "0.5.0"
color-eyre = "0.6.5"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.9.2"
rpassword = "7.4.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
sha2 = "0.10.9"
zeroize = "1.8.1"
